--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,13 @@
  */
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.0'
+    gradleVersion = '2.9'
 }
 
 group = 'at.schmutterer.oss.gradle'
 
 apply plugin: 'groovy'
+apply plugin: 'eclipse'
 
 sourceCompatibility=1.7
 targetCompatibility=1.7
@@ -29,8 +30,12 @@ targetCompatibility=1.7
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'org.apache.openjpa:openjpa:2.3.0'
+    compile 'org.apache.openjpa:openjpa:2.4.0'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
+
+	// for Java-based unit tests
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile files('build/libs/gradle-openjpa-0.3.0-SNAPSHOT.jar')
 }
 
 apply plugin: 'maven'
