--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,10 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
     compile 'org.apache.openjpa:openjpa:2.4.2'
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
 
-	// for Java-based unit tests
+    // for Java-based unit tests
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile files('build/libs/gradle-openjpa-0.3.0-SNAPSHOT.jar')
 }
